UPD | added text and optimize about me

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -8,29 +8,23 @@ const personalImageAlt = "Gaspar Bascur";
   <div
     class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
   >
-    <p>
-      Me llamo Gaspar y desde los 4 años empecé a interactuar con computadoras,
-      ejecutando juegos con MS-DOS. Mi curiosidad por la tecnología creció
-      cuando comencé a hacer juegos con RPG Maker e intentar escribir scripts en
-      Ruby, lo que me llevó a decidir estudiar informática.<strong>
-        En la Actualidad soy desarollador fullstack enfocado mas en el backend</strong
-      >.
-    </p>
+    <p>Desarrollador fullstack especializado en backend.</p>
 
     <p>
-      Uno de mis logros más significativos fue <strong
-        >desarrollar una aplicación móvil para el servicio de salud del Hospital
-        de Los Ángeles.</strong
-      > Esta aplicación permitía a los usuarios consultar su hora, encontrar farmacias
-      de turno, donar sangre, acceder a establecimientos de la red, y utilizar otros
-      servicios. como Salud Responde, entre otras características.
+      Mi proyecto más destacado ha sido el <strong
+        >desarrollo de la aplicación móvil oficial para el Hospital de Los
+        Ángeles, Región del Biobío.</strong
+      > La aplicación integra múltiples servicios del sistema de salud: consulta
+      de citas médicas, localización de farmacias de turno, sistema de donación de
+      sangre, directorio de establecimientos de la red asistencial y acceso a Salud
+      Responde, entre otras funcionalidades.
       <a
         class="text-yellow-500 dark:text-yellow-100 text-xs font-bold italic"
-        href="https://www.angelino.cl/2020/01/03/servicio-de-salud-biobio-lanza-nueva-aplicacion-movil-para-los-usuarios-y-usuarias-de-la-red-asistencial/"
+        href="https://www.angelino.cl/2020/01/03/servicio-de-salud-biobio-lanza-nueva-aplicacion-movil-para-los-usuarios-y-usuarias-de-red-asistencial/"
         target="_blank"
         rel="noreferrer"
       >
-        (Noticia en los Ángeles).
+        (Noticia en Los Ángeles).
       </a>
     </p>
 
@@ -53,8 +47,6 @@ const personalImageAlt = "Gaspar Bascur";
     style="object-position: 50% 50%"
   />
 </article>
-
-
 
 <!-- FRASES PROHIBIDAS EN VUESTRO PORTFOLIO
 
